[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://hud/pawn_info.gd" id="1_364y5"]
[ext_resource type="Texture2D" uid="uid://cqslb0rh7q3ka" path="res://assets/textures/entites/test_player/tile_0096.png" id="2_rrbt7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ica2b"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5208"]
bg_color = Color(1, 0.27451, 0.27451, 1)

[node name="PawnInfo" type="ColorRect"]
offset_right = 300.0
offset_bottom = 375.0
color = Color(0.258824, 0.258824, 0.258824, 1)
script = ExtResource("1_364y5")

[node name="CloseButtonContainer" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 285.0
offset_top = -15.0
offset_right = 315.0
offset_bottom = 15.0
color = Color(1, 0, 0, 1)

[node name="CloseButton" type="Button" parent="CloseButtonContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
flat = true

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 10.0
offset_right = 132.0
offset_bottom = 36.0
text = "Name"

[node name="LevelRaceClass" type="Label" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 35.0
offset_right = 261.0
offset_bottom = 61.0
text = "Level {X} {Race} {Class}"

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("2_rrbt7")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 280.0
offset_bottom = 125.0
theme_override_styles/background = SubResource("StyleBoxFlat_ica2b")
theme_override_styles/fill = SubResource("StyleBoxFlat_v5208")
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "50/100"
horizontal_alignment = 1

[node name="Stats" type="Control" parent="."]
anchors_preset = 0
offset_left = -40.0
offset_top = -40.0
metadata/_edit_use_anchors_ = true

[node name="StrContainer" type="ColorRect" parent="Stats"]
layout_mode = 0
offset_left = 75.0
offset_top = 200.0
offset_right = 155.0
offset_bottom = 225.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Strength" type="Label" parent="Stats/StrContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "STR"
horizontal_alignment = 1

[node name="DexContainer" type="ColorRect" parent="Stats"]
layout_mode = 0
offset_left = 75.0
offset_top = 240.0
offset_right = 155.0
offset_bottom = 265.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Dexterity" type="Label" parent="Stats/DexContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "DEX
"
horizontal_alignment = 1

[node name="ConContainer" type="ColorRect" parent="Stats"]
layout_mode = 0
offset_left = 75.0
offset_top = 280.0
offset_right = 155.0
offset_bottom = 305.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Constitution" type="Label" parent="Stats/ConContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CON
"
horizontal_alignment = 1

[node name="IntContainer" type="ColorRect" parent="Stats"]
layout_mode = 0
offset_left = 225.0
offset_top = 200.0
offset_right = 305.0
offset_bottom = 225.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Intelligence" type="Label" parent="Stats/IntContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "INT"
horizontal_alignment = 1

[node name="WisContainer" type="ColorRect" parent="Stats"]
layout_mode = 0
offset_left = 225.0
offset_top = 240.0
offset_right = 305.0
offset_bottom = 265.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Wisdom" type="Label" parent="Stats/WisContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "WIS"
horizontal_alignment = 1

[node name="ChaContainer" type="ColorRect" parent="Stats"]
layout_mode = 0
offset_left = 225.0
offset_top = 280.0
offset_right = 305.0
offset_bottom = 305.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Charisma" type="Label" parent="Stats/ChaContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CHA
"
horizontal_alignment = 1

[connection signal="pressed" from="CloseButtonContainer/CloseButton" to="." method="_on_close_button_pressed"]
